add Battery case for getIdentifiable for Propagated Contingency
Signed-off-by: Etienne LESOT <etienne.lesot@rte-france.com>